--- a/MarvelApp/app/build.gradle
+++ b/MarvelApp/app/build.gradle
@@ -16,6 +16,9 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "MARVEL_PUBLIC_KEY", "\"10d35df1efc1db2f16f440e83fef817c\""
+        buildConfigField "String", "MARVEL_PRIVATE_KEY", "\"302ebb0aa3ea0c02b08a8636c2ded604017a7e11\""
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -43,7 +46,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -52,7 +55,7 @@ dependencies {
     def retrofit = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:${retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit}"
-
+    implementation "com.squareup.retrofit2:adapter-rxjava3:${retrofit}"
     def okhttp = "4.9.3"
     implementation "com.squareup.okhttp3:okhttp:${okhttp}"
     debugImplementation "com.squareup.okhttp3:logging-interceptor:${okhttp}"
@@ -70,6 +73,11 @@ dependencies {
     //hilt
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+    //rxjava
+    implementation "io.reactivex.rxjava3:rxjava:3.1.4"
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
 
 detekt {
