--- a/MarvelApp/app/build.gradle
+++ b/MarvelApp/app/build.gradle
@@ -79,6 +79,13 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.1.4"
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    // moxy
+    def moxy = "2.2.2"
+    implementation "com.github.moxy-community:moxy:$moxy"
+    implementation "com.github.moxy-community:moxy-androidx:$moxy"
+    implementation "com.github.moxy-community:moxy-ktx:$moxy"
+    kapt "com.github.moxy-community:moxy-compiler:$moxy"
 }
 
 detekt {
