--- a/MarvelApp/app/build.gradle
+++ b/MarvelApp/app/build.gradle
@@ -86,6 +86,10 @@ dependencies {
     implementation "com.github.moxy-community:moxy-androidx:$moxy"
     implementation "com.github.moxy-community:moxy-ktx:$moxy"
     kapt "com.github.moxy-community:moxy-compiler:$moxy"
+
+    //routing
+    implementation("com.github.terrakok:cicerone:7.1")
+
 }
 
 detekt {
